fixed some more things